not rllw working anymore

--- a/views/flashcards.ejs
+++ b/views/flashcards.ejs
@@ -11,11 +11,13 @@
   <link rel="stylesheet" href="/flashcards.css" />
 </head>
 <body>
-<div class="container">
-  <div class="add-button-container">
-    <button id="add-flashcard">Add Flashcard</button>
-    <button id="add-notes">Add Notes</button>
-    <button id="study">Study</button>
+  
+  <div class="container">
+    <div class="add-button-container">
+      <button id="add-flashcard">Add Flashcard</button>
+      <button id="add-notes">Add Notes</button>
+      <button id = "displaySetBtn">Select an Existing Set</button>
+    </div>
   </div>
 
   <div id="card-con">
