--- a/views/study.ejs
+++ b/views/study.ejs
@@ -7,5 +7,9 @@
 </head>
 <body>
     
+
+    <script src = "/loadedFlashcards.js"></script> 
+    <script src = "/study.js"></script> 
 </body>
+
 </html>
