--- a/public/gc.css
+++ b/public/gc.css
@@ -9,11 +9,9 @@ html{
 
 body{
     background:#30a474;
-    border: 8px solid rgb(255, 255, 255);
-    width: 1000;
+    width: 5000000;
     height: auto;
     margin: 0 auto;
-    border: 8px solid rgb(255, 255, 255);
     padding: 0 20px 20px 20px
 
 }
