final calc styling

--- a/public/gc.css
+++ b/public/gc.css
@@ -32,8 +32,8 @@ p {
 table{
     width: 700px;
     height: 50x;
-    background:  rgb(48,164,116);
-    background: rgb(58, 198, 140);
+    background: #30a474;
+    background:#30a474;
     font-size: 20px;
 
 }
