--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,47 +1,62 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>to-do list</title>
+<head>
+  <title>to-do list</title>
+  <link rel="stylesheet" href="/todo.css" />
+  <style>
+    #tasks ul {
+      list-style-type: disc;
+      text-align: left;
+    }
 
-    <link rel="stylesheet" href="/todo.css" />
-  </head>
-  <body>
-    <div class="home">
-      <button id="home" onclick="window.location.href='/index'">
-        <img src="graphics/thestublogo.png" alt="Home" />
-      </button>
+    .container {
+      text-align: center;
+    }
+
+    .container form {
+      display: inline-block;
+      text-align: left;
+    }
+
+    .container form .input-color {
+      width: 200px;
+      margin-bottom: 10px;
+    }
+
+    .container form .btn {
+      display: block;
+      margin-top: 10px;
+    }
+  </style>
+</head>
+<body>
+  <div class="home">
+    <button id="home" onclick="window.location.href='/index'">
+      <img src="graphics/thestublogo.png" alt="Home" />
+    </button>
+  </div>
+
+  <div class="container">
+    <h1>to-do list</h1>
+    <p>organize and assess your tasks</p>
+
+    <form action="/addTask" method="POST">
+      <div id="newtask">
+        <input class="input-color" type="text" id="txt" name="task" placeholder="add tasks" />
+        <br />
+        <input type="submit" value="submit" class="btn deep-purple lighten-3" />
+      </div>
+    </form>
+
+    <div id="tasks">
+      <ul>
+        <% for(let i = 0; i < taskitems.length; i++) { %>
+          <li><%= taskitems[i].task_name %> <a class="btn" href="/todo/<%= taskitems[i].task_name %>/delete">delete</a></li>
+        <% } %>
+      </ul>
     </div>
+  </div>
 
-    <div class="container">
-      <div>
-        <h1>to-do list</h1>
-        <p>organize and assess your tasks</p>
-        <form action = "/addTask" method = "POST">
-            <div class="container">
-                <div id="newtask" style="z-index: 1000 !important">
-                  <input
-                    class="input-color"
-                    type="text"
-                    id="txt"
-                    name = "task"
-                    placeholder="add tasks"/>
-                    <input type="submit" value="submit" class="btn deep-purple lighten-3 ">
-
-                  <!-- <button class="btn button-color" id="push">add</button> -->
-                </div>
-                <% for(let i = 0; i<taskitems.length; i++){%>
-                    <td><%=taskitems[i].task_name%></td>
-                    <td><a class="btn" href = "/todo/<%= taskitems[i].task_name %>/delete">delete</a></td>
-                    <br>
-                <%}%>
-                
-                          <div id="tasks"></div>
-              </div>
-            </div>
-          </div>
-        </form>
-        
-
-    <script src="todo.js"></script>
-  </body>
+  <script src="todo.js"></script>
+</body>
 </html>
