work on flashcards (liam here too)

--- a/views/study.ejs
+++ b/views/study.ejs
@@ -7,9 +7,16 @@
 </head>
 <body>
     
+    <button id = "left">left</button>
+    <button id = "right">right</button>
 
+
+    <p hidden id = "sName"><%=set.set_name%></p>
+    <p hidden id = "sString"><%=set.set_string%></p>
+    
     <script src = "/loadedFlashcards.js"></script> 
     <script src = "/study.js"></script> 
+
 </body>
 
 </html>
