--- a/views/loadedFlashcards.ejs
+++ b/views/loadedFlashcards.ejs
@@ -53,14 +53,14 @@
 
 <div class="container">
     <div class="studyco">
-        <button id="study">Study</button>
+        <button id="study" href = "/study/<%=set[0].set_name%>">Study</button>
     </div>
 </div>
     
 
 
 <p hidden id = "sName"><%=set[0].set_name%></p>
-    <p hidden id = "sString"><%=set[0].set_string%></p>
+<p hidden id = "sString"><%=set[0].set_string%></p>
 
 <!-- Script -->
 <script src="/loadedFlashcards.js"></script>
