--- a/views/loadedFlashcards.ejs
+++ b/views/loadedFlashcards.ejs
@@ -53,7 +53,7 @@
 
 <div class="container">
     <div class="studyco">
-        <button id="study" href = "/study/<%=set[0].set_name%>">Study</button>
+        <a class ="btn" href = "/stud/<%= set[0].set_name %>">Study</button>
     </div>
 </div>
     
