--- a/public/flashcards.css
+++ b/public/flashcards.css
@@ -5,8 +5,15 @@
   font-family: "Poppins", sans-serif;
 }
 
-body {
-  background-color: #f7f9fd;
+body{
+  background:rgb(48,164,116);
+  width: 1000;
+  height: 1300px;
+  margin: 0 auto;
+  padding: 0 20px 20px 20px
+  
+
+
 }
 
 .container {
@@ -28,8 +35,8 @@ body {
   outline: none;
   cursor: pointer;
   font-size: 1em;
-  background-color: rgb(48, 164, 116);
-  color: #ffffff;
+  background-color: rgb(255, 255, 255);
+  color: #000000;
   padding-top: 20px;
   padding: 0.8em 1.2em;
   font-weight: 500;
@@ -199,4 +206,26 @@ textarea:focus {
     grid-template-columns: 1fr;
     gap: 1.2em;
   }
+}
+
+
+.home button{
+  text-align: left;
+  width: 100px;
+  height: 100px;
+  padding: 0;
+  border: none;
+  background: none;
+  cursor: pointer;
+
+}
+
+.home img {
+  width: 100px;
+  height: 100px;
+}
+
+.home {
+  display: flex;
+  justify-content: space-between;
 }
