--- a/public/study.css
+++ b/public/study.css
@@ -1,3 +1,10 @@
+html{
+    background:rgb(#FFFF
+    \\);
+    font-family: 'Jost', sans-serif;
+
+
+}
 #front {
     visibility: visible
 }
@@ -10,3 +17,57 @@
     display:flex;
     justify-content: space-between;
 }
+
+#flashcard {
+    border: 2px solid black; 
+    border-radius: 10px; 
+    padding: 20px; 
+    width: 300px;
+    height: 200px; 
+    margin: 20px; 
+    background-color: white; /* Adding a white background color */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adding a subtle box shadow */
+    text-align: center;
+}
+body{
+    background:rgb(48,164,116);
+    width: 1000;
+    height: 1300px;
+    margin: 0 auto;
+    padding: 0 20px 20px 20px
+    
+
+
+}
+
+
+.home button{
+    text-align: left;
+    width: 100px;
+    height: 100px;
+    padding: 0;
+    border: none;
+    background: none;
+    cursor: pointer;
+
+}
+
+.home img {
+    width: 100px;
+    height: 100px;
+}
+
+.home {
+    display: flex;
+    justify-content: space-between;
+}
+
+.counterContainer{
+    display:flex;
+    justify-content: center;
+}
+
+.counterContainer button {
+    margin-left:2%
+}
+
