--- a/views/loadedFlashcards.ejs
+++ b/views/loadedFlashcards.ejs
@@ -11,7 +11,34 @@
   <link rel="stylesheet" href="/flashcards.css" />
 </head>
 <body>
-
+    <div class = "home">
+        <button id = "home" onclick="window.location.href='/index'"><img src = "graphics/thestublogo.png"></button>
+        <div class = "userInfo">
+            <button style = "border-radius: 2; border-color: darkgreen;" id="logoutBtn">Log Out></button>
+            <script>
+                document.getElementById("logoutBtn").addEventListener("click", function() {
+                    // Make an AJAX request to the logout route
+                    fetch("/logout", {
+                        method: "GET",
+                        headers: {
+                            "Content-Type": "application/json"
+                        }
+                    })
+                    .then(response => {
+                        if (response.redirected) {
+                            // Redirect the user to the login page
+                            window.location.href = response.url;
+                        }
+                    })
+                    .catch(error => {
+                        console.error("Error logging out:", error);
+                        // Handle error
+                    });
+                });
+                </script>
+                
+            </div>
+    </div>
     
 
 <div class="container">
