--- a/views/flashcards.ejs
+++ b/views/flashcards.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class = "home">
-    <button id = "home" onclick="window.location.href='/index'"><img src = "graphics/thestublogo.png"></button>
+    <button id = "home" onclick="window.location.href='/index'"><img src = "/graphics/thestublogo.png"></button>
     <div class = "userInfo">
         <button style = "border-radius: 2; border-color: darkgreen;" id="logoutBtn">Log Out></button>
         <script>
