--- a/views/flashcards.ejs
+++ b/views/flashcards.ejs
@@ -9,6 +9,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
   <!-- Stylesheet -->
   <link rel="stylesheet" href="/flashcards.css" />
+  <style>
+    h1{
+      text-align: center;
+    }
+    
+    </style>
+
 </head>
 <body>
   <div class = "home">
@@ -39,6 +46,8 @@
             
         </div>
 </div>
+<h1>Create Your FlashCards!</h1>
+
 
   <div class="container">
     <div class="add-button-container">
@@ -53,7 +62,7 @@
   </div>
 </div>
 
-<div>
+<div class = "inputDiv">
   <input id = "setName" type = "text" placeholder = "Unit 3 Vocab">
   <button id="saveset">Save Flashcard Set</button>
 </div>
