--- a/public/flashcards.css
+++ b/public/flashcards.css
@@ -11,9 +11,6 @@ body{
   height: 1300px;
   margin: 0 auto;
   padding: 0 20px 20px 20px
-  
-
-
 }
 
 .container {
@@ -23,10 +20,16 @@ body{
   margin: auto;
 }
 
+.h1{
+  text-align: center;
+  
+}
+
 .add-button-container {
   padding-top: 20px;
   display: flex;
-  justify-content: space-between; /* Ensure buttons are spaced evenly */
+  justify-content: center; /* Ensure buttons are spaced evenly */
+  gap: 15px;
   margin-bottom: 1em; /* Add space between buttons and card */
 }
 
@@ -228,4 +231,9 @@ textarea:focus {
 .home {
   display: flex;
   justify-content: space-between;
+}
+.inputDiv {
+  justify-content: center;
+  display: flex;
+  text-align: center;
 }
