last minute styling

--- a/views/flashcards.ejs
+++ b/views/flashcards.ejs
@@ -46,7 +46,7 @@
             
         </div>
 </div>
-<h1>Create Your FlashCards!</h1>
+<h1>Create Your Flashcards!</h1>
 
 
   <div class="container">
