--- a/public/style.css
+++ b/public/style.css
@@ -1,20 +1,93 @@
+html {
+  background: #30a474;
+  font-family: 'Jost', sans-serif;
+}
+
 body {
-  background-color: #30a474;
-   
-}
-
-.btn-custom {
-  background-color: #f0f0f0 !important; /* Change to your desired button color */
-}
-
-.image-container {
+  background: #30a474;
+  width: 1000px;
+  margin: 0 auto;
+  padding: 0 20px 20px 20px;
+  color: #fff;
   text-align: center;
-  margin-top: 20px;
 }
 
-.image-container img {
-  max-width: 100%;
+.home {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
+
+.home button {
+  background: none;
+  border: none;
+}
+
+.home img {
+  width: 100px;
   height: auto;
 }
 
+.userInfo {
+  display: flex;
+  align-items: center;
+}
 
+.userInfo button {
+  border-radius: 2px;
+  border-color: darkgreen;
+  padding: 5px 10px;
+  background-color: white;
+  color: #226e4f;
+  cursor: pointer;
+}
+
+h1, h2 {
+  color: black;
+}
+
+h1 {
+  font-size: 2.5em;
+}
+
+h2 {
+  font-size: 2em;
+}
+
+textarea {
+  width: 80%;
+  height: 200px;
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  color: black;
+  background-color: #f4f4f4;
+}
+
+button {
+  background-color: #226e4f;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.center-button {
+  display: flex;
+  justify-content: center;
+}
+
+#summaryOutput {
+  margin-top: 20px;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  background-color: #fff;
+  color: #333;
+  width: 80%;
+  margin: 20px auto;
+}
