--- a/views/solo_trivia.ejs
+++ b/views/solo_trivia.ejs
@@ -19,6 +19,8 @@
         <div class = "home">
             <button id = "home" onclick="window.location.href='/index'"><img src = "graphics/thestublogo.png"></button>
             
+            <canvas id = "confetti"></canvas>
+
             <div class = "userInfo">
                 <button onclick="toggleMusic()" id="musicToggle">
                     <i class="material-icons">pause_circle_filled</i>
