--- a/public/flashcards.css
+++ b/public/flashcards.css
@@ -235,5 +235,44 @@ textarea:focus {
 .inputDiv {
   justify-content: center;
   display: flex;
-  text-align: center;
+  text-align: cente
+}
+
+.btn{
+  background-color: white;
+  color:black;
+}
+.btn:link { 
+  text-decoration: none; 
+} 
+.btn:visited { 
+  text-decoration: none; 
+} 
+.btn:hover { 
+  text-decoration: none; 
+} 
+.btn:active { 
+  text-decoration: none; 
+}
+
+.studyco {
+  display:flex;
+  justify-content: center;
+  text-align:center;
+}
+
+#abc {
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1em;
+  background-color: rgb(255, 255, 255);
+  color: #000000;
+  padding-top: 20px;
+  padding: 0.8em 1.2em;
+  font-weight: 500;
+  border-radius: 0.4em;
+  display:flex;
+  justify-content: center;
+  text-align:center;
 }
