--- a/public/todo.css
+++ b/public/todo.css
@@ -173,3 +173,19 @@ body.scroll{
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adding a subtle box shadow */
     text-align: center;
 }
+.btn{
+    background-color: white;
+    color:black;
+  }
+  .btn:link { 
+    text-decoration: none; 
+  } 
+  .btn:visited { 
+    text-decoration: none; 
+  } 
+  .btn:hover { 
+    text-decoration: none; 
+  } 
+  .btn:active { 
+    text-decoration: none; 
+  }
