--- a/views/flashcards.ejs
+++ b/views/flashcards.ejs
@@ -21,7 +21,7 @@
   <div class = "home">
     <button id = "home" onclick="window.location.href='/index'"><img src = "/graphics/thestublogo.png"></button>
     <div class = "userInfo">
-        <button style = "border-radius: 2; border-color: darkgreen;" id="logoutBtn">Log Out></button>
+        <button style = "border-radius: 2; border-color: darkgreen;" id="logoutBtn">Log Out</button>
         <script>
             document.getElementById("logoutBtn").addEventListener("click", function() {
                 // Make an AJAX request to the logout route
